srtp: Add "roc" caps field to the gst-launch example

The currrent example was broken since 1.8.3 it seems.

https://bugzilla.gnome.org/show_bug.cgi?id=786304